recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  carre(100)
}

def carre(l:Int) {
  for(i = 1 to 4)
  {
    avance(l)
    droite(90)
  }
}